[aliases]
test = pytest

[metadata]
description-file = README.md

[darglint]
docstring_style = numpy

[flake8]
ignore =
  D107,
  RST304,
  W503
per-file-ignores =
  pyraliddemo/__init__.py: WPS410,WPS412
  scripts/*.py: WPS421

[tool:pytest]
testpaths =
  pyraliddemo
  scripts
addopts =
  --verbose
  --emoji
  --flake8
  --cov=pyraliddemo
  --cov-report=term
  --cov-report=xml
  --junitxml=pytest.xml
